<resources>
    <string name="app_name">TaskApp</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="night_mode">Night Mode</string>
    <string name="english">English</string>
    <string name="uzbek">Uzbek</string>
    <string name="russian">Russian</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="main_screen">Main Screen</string>
    <string name="not_connection">No Internet connection</string>
</resources>