<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/margin_largeX"
            android:layout_marginStart="@dimen/margin_medium"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_medium"
            />
        <Switch
            android:id="@+id/switchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode"
            android:textSize="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_medium"
            />
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"/>
            <RadioButton
                android:id="@+id/uzbek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uzbek"/>
            <RadioButton
                android:id="@+id/russian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/russian"/>
        </RadioGroup>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</LinearLayout>